<resources>
    <string name="app_name">Cat App</string>
    <string name="feed_me_api">Feed Me API</string>
    <string name="enter_your_api">Enter your API</string>
    <string name="get_your_api_here">Get your API here</string>
    <string name="text_login">Login</string>
    <string name="text_search">Search</string>
    <string name="text_add_to_fav">Add to Favorite</string>
    <string name="text_next">Next</string>
    <string name="text_previous">Previous</string>
    <string name="text_API">live_5gYTnFRh7t9AtwYdCorHJvf2ltsVOEu695wOX6PQjML71C8AqwuLFdiB2BpZghDN</string>
    <string name="text_order">Order</string>
    <string name="text_breed">Breed</string>
    <string name="text_category">Category</string>
    <string name="text_number_one">1</string>
    <string name="text_breed_origin">Origin: </string>
    <string name="text_breed_detail">Description: </string>
    <string name="text_breed_life_span">Life span: </string>
    <string name="text_breed_child_friendly">Child Friendly</string>
    <string name="text_breed_dog_friendly">Dog Friendly</string>
    <string name="text_breed_adaptability_friendly">Adaptability</string>
    <string name="text_breed_health">Health Issues</string>
    <string name="text_breed_intelligence">Intelligence</string>
    <string name="text_read_more_at_wikipedia"><u>Read more at Wikipedia</u></string>
    <string name="text_download">Download</string>
    <string name="text_add_to_favourite">Add to Favourite</string>
    <string name="text_delete">Delete</string>
    <string name="text_asking_permission">Permission Required</string>
    <string name="text_accept">Accept</string>
    <string name="text_deny">Deny</string>
    <string name="text_permission_image_detail">This feature requires your permission to save photos to your device</string>
    <string name="text_download_success">Downloaded %s Successfully</string>
    <string name="text_already_added_to_favourite">This image is already in your Favourite</string>
    <string name="text_deleted_successfully">Deleted Successfully</string>
    <string name="text_invalid_API">Your API is invalid!</string>
    <string name="text_enter_API">Please enter your API</string>

    <string-array name="order">
        <item>Random</item>
        <item>Newest</item>
        <item>Last</item>
    </string-array>

</resources>
