<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color"
    tools:context=".view.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/img_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_140"
        app:cardCornerRadius="@dimen/dp_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dp_180"
            android:layout_height="@dimen/dp_180"
            android:src="@drawable/feed_me" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_requestAPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/feed_me_api"
        android:textSize="@dimen/sp_20"
        app:layout_constraintLeft_toLeftOf="@id/img_Logo"
        app:layout_constraintRight_toRightOf="@id/img_Logo"
        app:layout_constraintTop_toBottomOf="@id/img_Logo" />

    <EditText
        android:id="@+id/editText_requestAPI"
        android:layout_width="@dimen/dp_240"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_api"
        android:textSize="@dimen/sp_14"
        android:maxLines="1"
        android:inputType="text"
        android:backgroundTint="@color/purple"
        app:layout_constraintLeft_toLeftOf="@id/img_Logo"
        app:layout_constraintRight_toRightOf="@id/img_Logo"
        app:layout_constraintTop_toBottomOf="@id/text_requestAPI" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:backgroundTint="@color/purple"
        app:layout_constraintLeft_toLeftOf="@id/editText_requestAPI"
        app:layout_constraintRight_toRightOf="@id/editText_requestAPI"
        app:layout_constraintTop_toBottomOf="@id/editText_requestAPI" />

    <TextView
        android:id="@+id/text_openWebView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/get_your_api_here"
        android:layout_marginTop="@dimen/dp_14"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/purple"
        app:layout_constraintLeft_toLeftOf="@id/button_login"
        app:layout_constraintRight_toRightOf="@id/button_login"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>
