<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/text_add_to_fav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:text="@string/text_add_to_favourite"
        android:textColor="@color/color_pink_star"
        android:textSize="@dimen/sp_24"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_divider_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_white_trans"
        app:layout_constraintTop_toBottomOf="@id/text_add_to_fav" />

    <TextView
        android:id="@+id/text_download"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:text="@string/text_download"
        android:textColor="@color/color_pink_star"
        android:textSize="@dimen/sp_24"
        app:layout_constraintTop_toBottomOf="@+id/view_divider_1" />

    <View
        android:id="@+id/view_divider_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_white_trans"
        app:layout_constraintTop_toBottomOf="@id/text_download" />

    <TextView
        android:id="@+id/text_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/text_delete"
        android:textColor="@color/color_pink_star"
        android:textSize="@dimen/sp_24"
        app:layout_constraintTop_toBottomOf="@+id/view_divider_2" />

</androidx.constraintlayout.widget.ConstraintLayout>
