<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.homescreen.homefragments.ImageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/text_order"
                android:layout_marginTop="@dimen/dp_8"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_20"
                app:layout_constraintBottom_toTopOf="@id/selector_order"
                app:layout_constraintLeft_toLeftOf="@id/selector_order"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <Spinner
                android:id="@+id/selector_order"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="@dimen/dp_140"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_40"
                android:spinnerMode="dialog"
                android:backgroundTint="@color/color_pink"
                android:entries="@array/order"
                app:layout_constraintBottom_toTopOf="@id/text_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_order" />

            <TextView
                android:id="@+id/text_breed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/text_breed"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_20"
                app:layout_constraintBottom_toTopOf="@id/selector_breed"
                app:layout_constraintLeft_toLeftOf="@id/selector_breed"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/selector_breed"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="@dimen/dp_140"
                android:layout_height="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_40"
                android:spinnerMode="dialog"
                android:backgroundTint="@color/color_pink"
                app:layout_constraintBottom_toBottomOf="@id/selector_order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/selector_order" />

            <TextView
                android:id="@+id/text_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:fontFamily="@font/inter_bold"
                android:text="@string/text_category"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_20"
                app:layout_constraintBottom_toTopOf="@id/selector_category"
                app:layout_constraintStart_toStartOf="@+id/selector_order"
                app:layout_constraintTop_toBottomOf="@id/selector_order" />

            <Spinner
                android:id="@+id/selector_category"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="@dimen/dp_140"
                android:layout_height="@dimen/dp_40"
                android:backgroundTint="@color/color_pink"
                android:spinnerMode="dialog"
                app:layout_constraintStart_toStartOf="@+id/text_category"
                app:layout_constraintBottom_toTopOf="@id/rv_cat_image"
                app:layout_constraintTop_toBottomOf="@+id/text_category" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cat_image"
                android:layout_width="@dimen/dp_400"
                android:layout_height="@dimen/dp_400"
                android:layout_marginTop="@dimen/dp_14"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                app:layout_constraintBottom_toTopOf="@id/image_page_holder"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selector_category"
                tools:listitem="@layout/item_image_layout" />

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginVertical="@dimen/dp_14"
                android:background="@color/color_pink_tabLayout"
                app:layout_constraintBottom_toTopOf="@id/image_page_holder"
                app:layout_constraintTop_toBottomOf="@id/rv_cat_image"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <ImageView
                android:id="@+id/image_page_holder"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:background="@drawable/spinner_background"
                app:layout_constraintBottom_toTopOf="@id/btn_random"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_divider" />

            <TextView
                android:id="@+id/text_page_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/text_number_one"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="@id/image_page_holder"
                app:layout_constraintLeft_toLeftOf="@id/image_page_holder"
                app:layout_constraintRight_toRightOf="@id/image_page_holder"
                app:layout_constraintTop_toTopOf="@+id/image_page_holder" />

            <Button
                android:id="@+id/btn_random"
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:backgroundTint="@color/color_pink"
                android:text="@string/text_search"
                android:textSize="@dimen/sp_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_page_holder" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_14"
                android:backgroundTint="@color/color_pink"
                android:text="@string/text_next"
                android:textSize="@dimen/sp_12"
                app:layout_constraintLeft_toRightOf="@id/btn_random"
                app:layout_constraintTop_toTopOf="@+id/btn_random" />

            <Button
                android:id="@+id/btn_previous"
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_14"
                android:backgroundTint="@color/color_pink"
                android:text="@string/text_previous"
                android:textSize="@dimen/sp_12"
                app:layout_constraintRight_toLeftOf="@id/btn_random"
                app:layout_constraintTop_toTopOf="@+id/btn_random" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
